color contrast fix

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -14,7 +14,7 @@ header {
   }
   
 header h1 {
-    background-color: grey;
+    background-color: darkblue;
     color: white;
     padding: 10px;
     text-align: left;
@@ -24,7 +24,7 @@ header h1 {
   }
 
 header nav {
-    background-color: black;
+    background-color: lightskyblue;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -33,14 +33,14 @@ header nav {
 }
 
 a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
 main {
     grid-column: 1 / 4;
     grid-row: 2 / 3;
-    background-color: lightgrey;
+    background-color: lightblue;
     padding: 10px;
     color: black;
 }
@@ -55,8 +55,8 @@ aside {
 
 footer {
     grid-column: 1 / 5;
-    background-color: grey;
-    color: white;
+    background-color: lightskyblue;
+    color: black;
     text-align: center;
     padding: 10px;
     grid-row: 3 / 4;
